# ModernDataEngineering

./: .flake8  .gitignore  LICENSE  Makefile  README.md  Sanità_Lombardia.ipynb  docker-compose.airflow.yml  docker-compose.app.yml  docker-compose.yml  modern_data_engineering_flow.vsdx  pyproject.toml
.streamlit/: config.toml  config_example.toml
Datasets/: Dataset_Assistenza_Ospedaliera_per_ACC_e_ATS.csv  Dataset_condizioni_di_salute_per_provincia_e_genere.csv  Georeferenziazione_strutture.csv  ospedali.csv
Docker/: airflow.dockerfile  app.dockerfile  db.dockerfile  dev.dockerfile
Script DB/: WRH_PROVINCE_HEALTH.sql
airflow/: README.md
airflow/config/: common.env  variables.json
airflow/dags/: etl_process.py  python_example.py  sample_dag.py  serata_1.py  serata_2.py  simple_example.py
airflow/dags/common/: config.py  db.py  utils.py
airflow/dags/jobs/: check_stuff.py  extract_blob.py  extract_csv.py  extract_data.py  extract_db.py  import_db.py
app/: main.py
app/src/: config.py  launch.py  logger.py
app/static/: province_lombardia.geojson
data/: province_lombardia.geojson
doc/config/: config.ini  connection.yml  connections.py
query/: ANG_HOSPITAL.sql  WRH_ATS_DIAGNOSES.sql  WRH_PERFORMANCE_HOSPITAL.sql
scripts/: connessione.py  download_simple_data.py  etl-anagrafica+georef.py  etl-anagrafica-ospedali.py  etl-assistenza-ospedaliera.py  etl-condizioni-salute-provinicia.py  etl-dso.py  etl-georeferenziazione-strutture.py  etl-performance-ospedali.py  etl-popolazione-lombardia.py  launch.sh  launch_dev.sh
settings/: .env
(+17 files in other folders)
